tests/mysql/ui-common/section_in_sql_missing_map.stderr
error: sql_forge!: section {#filter} has no mapping
 --> tests/mysql/tmp-ui/section_in_sql_missing_map.rs:8:9
  |
8 |         "SELECT id, name FROM users {#filter}",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
